Set overflow:hidden by default to prevent a scrollbar flicker on individual text areas when content changes quickly. The only reason not to do this in the first place is if user has javascript disabled. If user has javascript disabled, they can't use the site anyway, so this is a non issue.

--- a/assets/stylesheets/components/_takeEditor.scss
+++ b/assets/stylesheets/components/_takeEditor.scss
@@ -3,13 +3,10 @@
   z-index: 1;
   width: 100%;
   border: 0;
-  overflow: auto;
+  overflow: hidden;
   outline: none;
   box-shadow: none;
   resize: none;
-  .noscroll {
-    overflow: hidden; // Added with JS to allow scrolling textareas if JS is turned off
-  }
 }
 @mixin textareaHeightDiv {
   position: absolute;
